# Medical-Chat-System

./: .vercelignore  README.md  pyproject.toml  requirements.txt
agents/: citation_agent.py  confidence.py  evidence_ranking.py  evidence_types.py  extractive_answer.py  query_understanding.py  schemas.py  source_verification.py  trusted_retrieval.py
backend/: main.py  settings.py  web_ui.py
backend/routes/: chat.py
backend/services/: pipeline.py
docs/: ANTI_HALLUCINATION.md  ARCHITECTURE.md  RECORDING_DEMO.md  TRUSTED_SOURCES_AND_PAYWALL.md
frontend/: app.py  export_pdf.py
pdf_pipeline/: chunk.py  extract.py
retrieval/: pubmed.py  trusted_journals.py
vectorstore/: chroma_manager.py  embeddings.py
